Twitch vod integration

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen>
             </iframe>
+
+            <iframe 
+                src="https://player.twitch.tv/?video=1889407621&parent=https://jackenchest.github.io/" 
+                frameborder="0" 
+                allowfullscreen="true" 
+                scrolling="no" 
+                height="378" 
+                width="620">
+            </iframe>
     
             <h3>Réseaux</h3>
             <a href="https://www.twitch.tv/jackenchest">Chaine twitch</a>
