--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </iframe>
 
             <iframe 
-                src="https://player.twitch.tv/?video=1889407621&parent=https://jackenchest.github.io/" 
+                src="https://player.twitch.tv/?video=1889407621&parent=jackenchest.github.io" 
                 frameborder="0" 
                 allowfullscreen="true" 
                 scrolling="no" 
