--- a/QuotesPage.html
+++ b/QuotesPage.html
@@ -12,14 +12,14 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">JackEnChest</a>
+                    <a class="navbar-brand" href="index.html">JackEnChest</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="FrontPage.html">Accueil</a>
+                                <a class="nav-link" aria-current="page" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="#">Quotes</a>
