Small change for twitch preview

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                 allowfullscreen>
             </iframe>
 
+            <br>
+
             <iframe 
-                src="https://player.twitch.tv/?video=1889407621&parent=jackenchest.github.io" 
+                src="https://player.twitch.tv/?channel=jackenchest&parent=jackenchest.github.io" 
                 frameborder="0" 
                 allowfullscreen="true" 
                 scrolling="no" 
