Ajout de l'authentification pour twitch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Bootstrap demo</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <script src="APIFunctions.js"></script>
     </head>
 
     <header>
@@ -71,6 +72,10 @@
                 height="315" 
                 width="560">
             </iframe>
+
+            <script>
+                AuthTwitch();
+            </script>
     
             <h3>Réseaux</h3>
             <a href="https://www.twitch.tv/jackenchest">Chaine twitch</a>
@@ -81,4 +86,7 @@
             <br>
         </div>
     </body>
+
+
+   
 </html>
