Add api request to get clips

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
             <script>
                 AuthTwitch();
+                GetTwitchClips();
             </script>
     
             <h3>Réseaux</h3>
