Changing parent for access

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </iframe>
 
             <iframe 
-                src="https://clips.twitch.tv/embed?clip=MistyCrunchyCocoaCoolCat-EshTb15ns0xDdWoW&parent=www.example.com" 
+                src="https://clips.twitch.tv/embed?clip=MistyCrunchyCocoaCoolCat-EshTb15ns0xDdWoW&parent=jackenchest.github.io" 
                 frameborder="0" 
                 allowfullscreen="true" 
                 scrolling="no" 
