Multi clips in views order

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     </head>
 
     <script>
+        var clipsInfo
         async function APIRequests()
         {
             const token = await AuthTwitch();
-            const clipsInfo = await GetTwitchClips(token);
+            clipsInfo = await GetTwitchClips(token);
+            console.log()
         }
 
         APIRequests()
-        
     </script>
 
     <header>
@@ -92,6 +93,17 @@
                 height="315" 
                 width="560">
             </iframe>
+
+            <div id="clips">
+
+            </div>
+
+            <script>
+                for (let i = 0; i < 5; i++)
+                {
+                    document.getElementById("clips").innerHTML = '<iframe src="https://clips.twitch.tv/embed?clip=$clipsInfo[i].id&parent=jackenchest.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="315" width="560"></iframe>'
+                }
+            </script>
     
             <h3>Réseaux</h3>
             <a href="https://www.twitch.tv/jackenchest">Chaine twitch</a>
