--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     await console.log(clipsInfo)
                     for (let i = 0; i < 5; i++)
                     {
-                        document.getElementById("clips").innerHTML = await `<iframe src="https://clips.twitch.tv/embed?clip=${clipsInfo.data[i].id}&parent=jackenchest.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="315" width="560"></iframe>`
+                        document.getElementById("clips").innerHTML += await `<iframe src="https://clips.twitch.tv/embed?clip=${clipsInfo.data[i].id}&parent=jackenchest.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="315" width="560"></iframe>`
                     }
                 }
 
