Place clips in center

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 width="560">
             </iframe>
 
-            <div id="clips">
+            <div class="text-center" id="clips">
 
             </div>
 
